// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders correctly when the pathname does not match a route 1`] = `
<NavigationDrawer
  autoclose={true}
  contentComponent="main"
  contentId="main-content"
  defaultMedia="mobile"
  desktopDrawerType="clipped"
  desktopMinWidth={1025}
  drawerTransitionDuration={300}
  extractMini={true}
  header={<div />}
  includeDrawerHeader={true}
  jumpLabel="Jump to content"
  mobileDrawerType="temporary"
  mobileMinWidth={320}
  navItems={
    Array [
      Object {
        "component": [Function],
        "key": "all",
        "leftIcon": <MdApps
          size={24}
    />,
        "primaryText": "All",
        "to": "/all",
      },
      Object {
        "component": [Function],
        "key": "inbox",
        "leftIcon": <MdInbox
          size={24}
    />,
        "primaryText": "Inbox",
        "to": "/inbox",
      },
      Object {
        "component": [Function],
        "key": "projects",
        "leftIcon": <MdAssignment
          size={24}
    />,
        "primaryText": "Projects",
        "to": "/projects",
      },
      Object {
        "component": [Function],
        "key": "tags",
        "leftIcon": <MdLabel
          size={24}
    />,
        "primaryText": "Tags",
        "to": "/tags",
      },
      Object {
        "component": [Function],
        "key": "account",
        "leftIcon": <MdPerson
          size={24}
    />,
        "primaryText": "Account",
        "to": "/account",
      },
    ]
  }
  persistentIconChildren="arrow_back"
  position="left"
  tabletDrawerType="clipped"
  tabletMinWidth={768}
  temporaryIconChildren={<MdMenu />}
  toolbarActions={
    Array [
      <ButtonTooltipedInked
        icon={true}
        inkTransitionEnterTimeout={450}
        inkTransitionLeaveTimeout={300}
        inkTransitionOverlap={150}
    >
        <MdSync />
    </ButtonTooltipedInked>,
    ]
  }
  toolbarThemeType="colored"
  toolbarTitleMenu={
    <SelectField
      defaultValue=""
      iconChildren={
        <MdArrowDropDown
          size={24}
        />
      }
      id="items-to-show-selection"
      itemLabel="label"
      itemValue="value"
      keyboardMatchingTimeout={1000}
      lineDirection="left"
      menuItems={
        Array [
          "All",
          "Not Completed",
          "Completed",
        ]
      }
      position="tl"
      stretchList={true}
    />
  }
  transitionEnterTimeout={300}
  transitionName="md-cross-fade"
>
  <div />
  <SnackbarContainer
    autohide={true}
    autohideTimeout={3000}
    toasts={Array []}
    transitionEnterTimeout={300}
    transitionLeaveTimeout={300}
    transitionName="md-snackbar"
  />
</NavigationDrawer>
`;

exports[`App component renders correctly when the pathname matches a route 1`] = `
<NavigationDrawer
  autoclose={true}
  contentComponent="main"
  contentId="main-content"
  defaultMedia="mobile"
  desktopDrawerType="clipped"
  desktopMinWidth={1025}
  drawerTransitionDuration={300}
  extractMini={true}
  header={<div />}
  includeDrawerHeader={true}
  jumpLabel="Jump to content"
  mobileDrawerType="temporary"
  mobileMinWidth={320}
  navItems={
    Array [
      Object {
        "component": [Function],
        "key": "all",
        "leftIcon": <MdApps
          size={24}
    />,
        "primaryText": "All",
        "to": "/all",
      },
      Object {
        "active": true,
        "component": [Function],
        "key": "inbox",
        "leftIcon": <MdInbox
          size={24}
    />,
        "primaryText": "Inbox",
        "to": "/inbox",
      },
      Object {
        "component": [Function],
        "key": "projects",
        "leftIcon": <MdAssignment
          size={24}
    />,
        "primaryText": "Projects",
        "to": "/projects",
      },
      Object {
        "component": [Function],
        "key": "tags",
        "leftIcon": <MdLabel
          size={24}
    />,
        "primaryText": "Tags",
        "to": "/tags",
      },
      Object {
        "component": [Function],
        "key": "account",
        "leftIcon": <MdPerson
          size={24}
    />,
        "primaryText": "Account",
        "to": "/account",
      },
    ]
  }
  persistentIconChildren="arrow_back"
  position="left"
  tabletDrawerType="clipped"
  tabletMinWidth={768}
  temporaryIconChildren={<MdMenu />}
  toolbarActions={
    Array [
      <ButtonTooltipedInked
        icon={true}
        inkTransitionEnterTimeout={450}
        inkTransitionLeaveTimeout={300}
        inkTransitionOverlap={150}
    >
        <MdSync />
    </ButtonTooltipedInked>,
    ]
  }
  toolbarThemeType="colored"
  toolbarTitleMenu={
    <SelectField
      defaultValue=""
      iconChildren={
        <MdArrowDropDown
          size={24}
        />
      }
      id="items-to-show-selection"
      itemLabel="label"
      itemValue="value"
      keyboardMatchingTimeout={1000}
      lineDirection="left"
      menuItems={
        Array [
          "All",
          "Not Completed",
          "Completed",
        ]
      }
      position="tl"
      stretchList={true}
    />
  }
  transitionEnterTimeout={300}
  transitionName="md-cross-fade"
>
  <div />
  <SnackbarContainer
    autohide={true}
    autohideTimeout={3000}
    toasts={Array []}
    transitionEnterTimeout={300}
    transitionLeaveTimeout={300}
    transitionName="md-snackbar"
  />
</NavigationDrawer>
`;
